--- a/src/asets/style/App.css
+++ b/src/asets/style/App.css
@@ -22,6 +22,7 @@
     justify-items: center;
     /*max-width: 600px;*/
     /*height: 100vh;*/
+    margin: 0;
 }
 .section__pokeBox {
     margin: 10px;
@@ -42,6 +43,10 @@
 .paginationBtn{
     text-align: center;
     padding-top: 10px;
+}
+.paginationBtn button{
+    width: 100px;
+    font-size: 1.3rem;
 }
 .section__pokeBoxImg {
     display: flex;
@@ -88,5 +93,12 @@
     }
     .section__pokemon {
         height: 100%;
+
+    }
+    .section__pokeBox{
+        width: 300px;
+    }
+    .modal__section {
+        width: 200px;
     }
 }
